crates/java-syntax/tests/snapshots/parser_snapshots__parse_qualified_type_with_arguments.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { java.util.List<String> xs; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "java"
DOT "."
IDENTIFIER "util"
DOT "."
IDENTIFIER "List"
LESS "<"
IDENTIFIER "String"
GREATER ">"
WHITESPACE " "
IDENTIFIER "xs"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..38
  CLASS_DECL@0..38
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..38
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      FIELD_DECL@10..36
        TYPE@10..32
          QUALIFIED_NAME@10..24
            IDENTIFIER@10..14 "java"
            DOT@14..15 "."
            IDENTIFIER@15..19 "util"
            DOT@19..20 "."
            IDENTIFIER@20..24 "List"
          TYPE_ARGUMENTS@24..32
            LESS@24..25 "<"
            TYPE_ARGUMENT@25..31
              TYPE@25..31
                QUALIFIED_NAME@25..31
                  IDENTIFIER@25..31 "String"
            GREATER@31..32 ">"
        WHITESPACE@32..33 " "
        VARIABLE_DECLARATOR_LIST@33..35
          VARIABLE_DECLARATOR@33..35
            IDENTIFIER@33..35 "xs"
        SEMICOLON@35..36 ";"
      WHITESPACE@36..37 " "
      R_BRACE@37..38 "}"
