crates/java-syntax/tests/snapshots/parser_snapshots__parse_record_with_compact_constructor.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
record R(int x) { R {} }
TOKENS:
IDENTIFIER "record"
WHITESPACE " "
IDENTIFIER "R"
L_PAREN "("
INT_KW "int"
WHITESPACE " "
IDENTIFIER "x"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "R"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..24
  RECORD_DECL@0..24
    IDENTIFIER@0..6 "record"
    WHITESPACE@6..7 " "
    IDENTIFIER@7..8 "R"
    FORMAL_PARAMETERS@8..15
      L_PAREN@8..9 "("
      FORMAL_PARAMETER@9..14
        TYPE@9..12
          INT_KW@9..12 "int"
        WHITESPACE@12..13 " "
        IDENTIFIER@13..14 "x"
      R_PAREN@14..15 ")"
    WHITESPACE@15..16 " "
    RECORD_BODY@16..24
      L_BRACE@16..17 "{"
      WHITESPACE@17..18 " "
      COMPACT_CONSTRUCTOR_DECL@18..22
        IDENTIFIER@18..19 "R"
        WHITESPACE@19..20 " "
        BLOCK@20..22
          L_BRACE@20..21 "{"
          R_BRACE@21..22 "}"
      WHITESPACE@22..23 " "
      R_BRACE@23..24 "}"
