crates/java-syntax/tests/snapshots/parser_snapshots__parse_record_with_method_and_field.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
record R(int x) { int y; void f() {} }
TOKENS:
IDENTIFIER "record"
WHITESPACE " "
IDENTIFIER "R"
L_PAREN "("
INT_KW "int"
WHITESPACE " "
IDENTIFIER "x"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "y"
SEMICOLON ";"
WHITESPACE " "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "f"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..38
  RECORD_DECL@0..38
    IDENTIFIER@0..6 "record"
    WHITESPACE@6..7 " "
    IDENTIFIER@7..8 "R"
    FORMAL_PARAMETERS@8..15
      L_PAREN@8..9 "("
      FORMAL_PARAMETER@9..14
        TYPE@9..12
          INT_KW@9..12 "int"
        WHITESPACE@12..13 " "
        IDENTIFIER@13..14 "x"
      R_PAREN@14..15 ")"
    WHITESPACE@15..16 " "
    RECORD_BODY@16..38
      L_BRACE@16..17 "{"
      WHITESPACE@17..18 " "
      FIELD_DECL@18..24
        TYPE@18..21
          INT_KW@18..21 "int"
        WHITESPACE@21..22 " "
        VARIABLE_DECLARATOR_LIST@22..23
          VARIABLE_DECLARATOR@22..23
            IDENTIFIER@22..23 "y"
        SEMICOLON@23..24 ";"
      WHITESPACE@24..25 " "
      METHOD_DECL@25..36
        VOID_KW@25..29 "void"
        WHITESPACE@29..30 " "
        IDENTIFIER@30..31 "f"
        FORMAL_PARAMETERS@31..33
          L_PAREN@31..32 "("
          R_PAREN@32..33 ")"
        WHITESPACE@33..34 " "
        BLOCK@34..36
          L_BRACE@34..35 "{"
          R_BRACE@35..36 "}"
      WHITESPACE@36..37 " "
      R_BRACE@37..38 "}"
