crates/java-syntax/tests/snapshots/parser_snapshots__parse_record_with_normal_constructor_like.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
record R(int x) { R() {} }
TOKENS:
IDENTIFIER "record"
WHITESPACE " "
IDENTIFIER "R"
L_PAREN "("
INT_KW "int"
WHITESPACE " "
IDENTIFIER "x"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "R"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..26
  RECORD_DECL@0..26
    IDENTIFIER@0..6 "record"
    WHITESPACE@6..7 " "
    IDENTIFIER@7..8 "R"
    FORMAL_PARAMETERS@8..15
      L_PAREN@8..9 "("
      FORMAL_PARAMETER@9..14
        TYPE@9..12
          INT_KW@9..12 "int"
        WHITESPACE@12..13 " "
        IDENTIFIER@13..14 "x"
      R_PAREN@14..15 ")"
    WHITESPACE@15..16 " "
    RECORD_BODY@16..26
      L_BRACE@16..17 "{"
      WHITESPACE@17..18 " "
      CONSTRUCTOR_DECL@18..24
        IDENTIFIER@18..19 "R"
        FORMAL_PARAMETERS@19..21
          L_PAREN@19..20 "("
          R_PAREN@20..21 ")"
        WHITESPACE@21..22 " "
        BLOCK@22..24
          L_BRACE@22..23 "{"
          R_BRACE@23..24 "}"
      WHITESPACE@24..25 " "
      R_BRACE@25..26 "}"
