crates/java-syntax/tests/snapshots/parser_snapshots__parse_record_with_type_parameters.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
public record R<T, U>(T x, U y) {}
TOKENS:
PUBLIC_KW "public"
WHITESPACE " "
IDENTIFIER "record"
WHITESPACE " "
IDENTIFIER "R"
LESS "<"
IDENTIFIER "T"
COMMA ","
WHITESPACE " "
IDENTIFIER "U"
GREATER ">"
L_PAREN "("
IDENTIFIER "T"
WHITESPACE " "
IDENTIFIER "x"
COMMA ","
WHITESPACE " "
IDENTIFIER "U"
WHITESPACE " "
IDENTIFIER "y"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..34
  RECORD_DECL@0..34
    MODIFIER_LIST@0..6
      PUBLIC_KW@0..6 "public"
    WHITESPACE@6..7 " "
    IDENTIFIER@7..13 "record"
    WHITESPACE@13..14 " "
    IDENTIFIER@14..15 "R"
    TYPE_PARAMETERS@15..21
      LESS@15..16 "<"
      TYPE_PARAMETER@16..17
        IDENTIFIER@16..17 "T"
      COMMA@17..18 ","
      WHITESPACE@18..19 " "
      TYPE_PARAMETER@19..20
        IDENTIFIER@19..20 "U"
      GREATER@20..21 ">"
    FORMAL_PARAMETERS@21..31
      L_PAREN@21..22 "("
      FORMAL_PARAMETER@22..25
        TYPE@22..23
          QUALIFIED_NAME@22..23
            IDENTIFIER@22..23 "T"
        WHITESPACE@23..24 " "
        IDENTIFIER@24..25 "x"
      COMMA@25..26 ","
      WHITESPACE@26..27 " "
      FORMAL_PARAMETER@27..30
        TYPE@27..28
          QUALIFIED_NAME@27..28
            IDENTIFIER@27..28 "U"
        WHITESPACE@28..29 " "
        IDENTIFIER@29..30 "y"
      R_PAREN@30..31 ")"
    WHITESPACE@31..32 " "
    RECORD_BODY@32..34
      L_BRACE@32..33 "{"
      R_BRACE@33..34 "}"
