crates/java-syntax/tests/snapshots/parser_snapshots__parse_recovery_broken_params.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { void f( { int x; } }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "f"
L_PAREN "("
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "x"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..30
  CLASS_DECL@0..30
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..30
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      METHOD_DECL@10..30
        VOID_KW@10..14 "void"
        WHITESPACE@14..15 " "
        IDENTIFIER@15..16 "f"
        FORMAL_PARAMETERS@16..30
          L_PAREN@16..17 "("
          WHITESPACE@17..18 " "
          ERROR@18..30
            ERROR@18..18
            L_BRACE@18..19 "{"
            WHITESPACE@19..20 " "
            INT_KW@20..23 "int"
            WHITESPACE@23..24 " "
            IDENTIFIER@24..25 "x"
            SEMICOLON@25..26 ";"
            WHITESPACE@26..27 " "
            R_BRACE@27..28 "}"
            WHITESPACE@28..29 " "
            R_BRACE@29..30 "}"
          MISSING@30..30
        MISSING@30..30
      MISSING@30..30
