crates/java-syntax/tests/snapshots/parser_snapshots__parse_recovery_compact_constructor_like_in_class.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { A {} }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..16
  CLASS_DECL@0..16
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..16
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      FIELD_DECL@10..12
        TYPE@10..11
          QUALIFIED_NAME@10..11
            IDENTIFIER@10..11 "A"
        WHITESPACE@11..12 " "
        VARIABLE_DECLARATOR_LIST@12..12
          VARIABLE_DECLARATOR@12..12
            MISSING@12..12
        MISSING@12..12
      INSTANCE_INITIALIZER@12..14
        BLOCK@12..14
          L_BRACE@12..13 "{"
          R_BRACE@13..14 "}"
      WHITESPACE@14..15 " "
      R_BRACE@15..16 "}"
