crates/java-syntax/tests/snapshots/parser_snapshots__parse_recovery_constructor_in_interface.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
interface A { A() {} }
TOKENS:
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "A"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..22
  INTERFACE_DECL@0..22
    INTERFACE_KW@0..9 "interface"
    WHITESPACE@9..10 " "
    IDENTIFIER@10..11 "A"
    WHITESPACE@11..12 " "
    INTERFACE_BODY@12..22
      L_BRACE@12..13 "{"
      WHITESPACE@13..14 " "
      CONSTRUCTOR_DECL@14..20
        IDENTIFIER@14..15 "A"
        FORMAL_PARAMETERS@15..17
          L_PAREN@15..16 "("
          R_PAREN@16..17 ")"
        WHITESPACE@17..18 " "
        BLOCK@18..20
          L_BRACE@18..19 "{"
          R_BRACE@19..20 "}"
      WHITESPACE@20..21 " "
      R_BRACE@21..22 "}"
